Added feature to retrieve metadata of table from database with additional flag for indexing data.